@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rcontrib.1,v 1.12 2015/02/24 19:39:26 greg Exp $"
+.\" RCSid "$Id: rcontrib.1,v 1.13 2016/09/12 20:31:34 greg Exp $"
 .TH RCONTRIB 1 5/25/05 RADIANCE
 .SH NAME
 rcontrib - compute contribution coefficients in a RADIANCE scene
@@ -158,7 +158,10 @@ The
 option may be used to further define
 a "bin number" within each object if finer resolution is needed, and
 this will be applied to a "%d" format in the output file
-specification if present.
+specification if present. 
+(The final integer will be offset incrementally
+if the output is a RADIANCE picture and more than one modifier has
+the same format specification.)\0
 The actual bin number is computed at run time based on ray direction
 and surface intersection, as described below.
 The number of bins must be specified in advance with the
